Move ShutdownOnFailure policy to its own demo class