@@ -21,5 +21,6 @@ And then run the three demos like this:
 ```
 java -cp target/classes eu.happycoders.demo.ExecutorServiceDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.StructuredConcurrencyDemo
+java -cp target/classes --enable-preview eu.happycoders.demo.ShutdownOnFailureDemo
 java -cp target/classes --enable-preview eu.happycoders.demo.StructuredConcurrencyWithScopedValueDemo
 ```
